2003-01-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Include.h: Add HSL and HWB colorspace
 	transformation support.

2003-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (colorSpace): Support colorspace transforms
	other than to and from RGB by translating to RGB as an intermediate
	step.

2002-11-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp: Added DrawablePushClipPath,
 	DrawablePopClipPath, and DrawableClipPath.  Implementation
 	contributed by Vladimir <lvm@integrum.ru>.

2002-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (colorMapSize): New method to set, or return
	the colormap size.

2002-11-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (adaptiveThreshold): New method.

2002-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (coderInfoList): Intentionally ignore missing
 	delegate exceptions.

2002-09-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Options.cpp (textEncoding): Had forgotten to implement
 	textEncoding!

2002-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Color.cpp (Color): Use of 'new' and 'delete' in inlines was
 	causing memory allocation/deallocation problems for users of the
 	DLL build.  Problem was identified by Marc Iwan.

2002-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (compare): New method to compare current image
 	with a reference image.

2002-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (textEncoding): New method to allow setting the
 	default text encoding (e.g. "UTF-8").

	* lib/Drawable.cpp (DrawableText): Added an alternate constructor
 	to allow specifying the text encoding (e.g. "UTF-8").

2002-08-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Overall: Now compiles as a DLL using Visual C++.

2002-07-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
